<resources>
    <string name="app_name">Medicare</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Login in</string>
    <string name="welcome">"Selamat Datang"</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="login_text_message">Login ke akun mu"</string>
    <string name="invalid_username">Username tidak valid</string>
    <string name="invalid_password">Password harus lebih dari 5 karakter</string>
    <string name="login_failed">"Login gagal"</string>
    <string name="register_text_message">"Daftar akun mu"</string>
    <!--Untuk Menu-->
    <string name="beranda">Beranda</string>
    <string name="transaksi">Transaksi</string>
    <string name="tenaga_medis">Telepon</string>
    <string name="jadwal">Jadwal</string>
    <string name="profil">Profile</string>
    <!--UI Profile-->
    <string name="logout">Logout</string>
    <string name="nama">Budi Susanto</string>
    <string name="email">BudiSusanto@gmail.com</string>
    <string name="textUmur">Umur</string>
    <string name="textBerat">Berat</string>
    <string name="textTinggi">Tinggi</string>
    <string name="riwayattrans">Riwayat Transaksi</string>
    <string name="remainderobat">Remainder Obat</string>
    <!--UI Jadwal Obat-->
    <string name="jadwalobat">Jadwal Minum Obat</string>
    <string name="jadwalharian">Jadwal Harian</string>
    <string name="tambahjadwal">Tambah Jadwal</string>
    <string name="jadwalobat2">Input Jadwal Obat</string>
    <string name="namaobat">Nama Obat</string>
    <string name="textNamaObat">Oxydosin</string>
    <string name="keterangan">Jumlah Obat dan Berapa lama?</string>
    <string name="jumlahpil">2 pil</string>
    <string name="jangkawaktu">30 days</string>
    <string name="urutanminum">Makanan dan Obat</string>
    <string name="SimpanJadwal">Tambah Jadwal</string>
    <string name="notification">Notification</string>
    <string name="name">Name</string>
    <string name="homepageName">Halo, Budi Selamat Datang</string>
    <string name="image_profile">Image Profile</string>
    <string name="title_activity_toko_kesehatan">TokoKesehatanActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="penunjang_kesehatan">Penunjang Kesehatan</string>
    <string name="treatment_covid">Treatment Covid</string>
    <string name="peduli_covid">Peduli Covid</string>
    <string name="informasi_obat">Informasi Obat</string>
    <string name="kalkulator_bmi">Kalkulator BMI</string>
    <string name="zona_covid">Zona Covid</string>
    <string name="berita_covid">Berita Covid</string>
    <string name="alarm_obat">Alarm Obat</string>
    <string name="toko_kesehatan">Toko Kesehatan</string>
    <string name="minyak_angin_balsam">Minyak Angin</string>
    <string name="batuk_flu">Batuk/Flu</string>
    <string name="ibu_anak">Ibu Anak</string>
    <string name="kategori">Kategori Obat</string>
    <string name="i_am_here">Lokasi Saya</string>
    <string name="provider_failed">Provider Failed</string>
    <string name="title_activity_maps2">MapsActivity2</string>


</resources>