<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/slider_home"
        layout="@layout/card_home_covid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notifikasi" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/backdrop5"
        android:scaleType="fitCenter"
        android:contentDescription="@string/name" />


    <TextView
        android:id="@+id/halo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:gravity="center_vertical"
        android:text="Halo,"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/nameUserHome"
        app:layout_constraintStart_toEndOf="@+id/notifikasi"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameUserHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/halo"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Budi" />

    <TextView
        android:id="@+id/selamatDatang"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:text="Selamat Datang"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/notifikasi"
        app:layout_constraintTop_toBottomOf="@+id/halo" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/corners_100"
        android:contentDescription="@string/notification"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/halo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_user_notif" />

    <ImageView
        android:id="@+id/notifikasi"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_profile"
        tools:srcCompat="@drawable/ic_profile"
        android:contentDescription="@string/image_profile" />
    <TextView
        android:id="@+id/txtMenu1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/peduli_covid"
        android:textSize="18dp"
        android:fontFamily="@font/poppinssemibold"
        android:textColor="@color/mainColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider_home" />

    <ImageButton
        android:id="@+id/btn_menu1_1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="@color/ligtgray5"
        android:src="@drawable/ic_home_menu1_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMenu1" />

    <TextView
        android:id="@+id/txt_menu1_1"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:gravity="center"
        android:layout_marginStart="32dp"
        android:text="@string/zona_covid"
        android:textColor="@color/black1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_menu1_1" />

    <ImageButton
        android:id="@+id/btn_menu1_2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="24dp"
        android:backgroundTint="@color/ligtgray5"
        android:src="@drawable/ic_home_menu1_2"
        app:layout_constraintStart_toEndOf="@+id/btn_menu1_1"
        app:layout_constraintTop_toBottomOf="@+id/txtMenu1" />

    <TextView
        android:id="@+id/txt_menu1_2"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:gravity="center"
        android:text="@string/berita_covid"
        android:textColor="@color/black1"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/txt_menu1_1"
        app:layout_constraintTop_toBottomOf="@+id/btn_menu1_2" />

    <ImageButton
        android:id="@+id/btn_menu1_3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="24dp"
        android:backgroundTint="@color/ligtgray5"
        android:src="@drawable/ic_home_menu1_3"
        app:layout_constraintStart_toEndOf="@+id/btn_menu1_2"
        app:layout_constraintTop_toBottomOf="@+id/txtMenu1" />

    <TextView
        android:id="@+id/txt_menu1_3"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:gravity="center"
        android:text="@string/treatment_covid"
        android:textColor="@color/black1"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/txt_menu1_2"
        app:layout_constraintTop_toBottomOf="@+id/btn_menu1_3" />

    <TextView
        android:id="@+id/txtMenu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/penunjang_kesehatan"
        android:textColor="@color/mainColor"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_menu1_1" />

    <ImageButton
        android:id="@+id/btn_menu2_1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="@color/ligtgray5"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_home_menu2_1"
        app:layout_constraintTop_toBottomOf="@+id/txtMenu2" />
    <TextView
        android:id="@+id/txt_menu2_1"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:gravity="center"
        android:layout_marginStart="32dp"
        android:text="@string/toko_kesehatan"
        android:textColor="@color/black1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_menu2_1" />


    <ImageButton
        android:id="@+id/btn_menu2_2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="24dp"
        android:backgroundTint="@color/ligtgray5"
        android:src="@drawable/ic_home_menu2_2"
        app:layout_constraintStart_toEndOf="@+id/btn_menu2_1"
        app:layout_constraintTop_toBottomOf="@+id/txtMenu2" />

    <TextView
        android:id="@+id/txt_menu2_2"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:gravity="center"
        android:text="@string/alarm_obat"
        android:textColor="@color/black1"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/txt_menu2_1"
        app:layout_constraintTop_toBottomOf="@+id/btn_menu2_2" />

    <ImageButton
        android:id="@+id/btn_menu2_3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="24dp"
        android:backgroundTint="@color/ligtgray5"
        android:src="@drawable/ic_home_menu2_3"
        app:layout_constraintStart_toEndOf="@+id/btn_menu2_2"
        app:layout_constraintTop_toBottomOf="@+id/txtMenu2" />

    <TextView
        android:id="@+id/txt_menu2_3"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:gravity="center"
        android:text="@string/kalkulator_bmi"
        android:textColor="@color/black1"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/txt_menu2_2"
        app:layout_constraintTop_toBottomOf="@+id/btn_menu2_2" />

    <TextView
        android:id="@+id/txtMenu3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/informasi_obat"
        android:textSize="18dp"
        android:fontFamily="@font/poppinssemibold"
        android:textColor="@color/mainColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_menu2_1" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation_menu"
        android:background="@drawable/custom_bottom_menu"
        app:itemIconTint="@drawable/selector_buttom_menu"
        app:itemRippleColor="@color/lightgray"
        />




</androidx.constraintlayout.widget.ConstraintLayout>